apps/base/papra/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papra
  namespace: papra
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: papra
  template:
    metadata:
      labels:
        app: papra
        app.kubernetes.io/name: papra
        app.kubernetes.io/instance: papra
    spec:
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: papra
          image: ghcr.io/papra-hq/papra:26.2.2-rootless
          ports:
            - containerPort: 1221
              name: http
          volumeMounts:
            - name: papra-data
              mountPath: /app/app-data
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: papra-data
          persistentVolumeClaim:
            claimName: papra-data-pvc
