apps/base/papra/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: papra
  namespace: papra
spec:
  ingressClassName: traefik
  rules:
    - host: docs.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: papra
                port:
                  name: http
