apps/base/papra/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: papra-route
  namespace: papra
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - docs.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: papra
          port: 1221
